# lib-NBR14522

./: .gitignore  CMakeLists.txt  README.md  setup.sh
.github/workflows/: ci.yml
app/: leitor.cpp  main.cpp
app/leitor/: leitor-cli.cpp  leitor.cpp
apps/: CMakeLists.txt
apps/leitor-cli/: CMakeLists.txt  leitor-cli.cpp
apps/mqtt-pub/: CMakeLists.txt  main.cpp
apps/mqtt-pub/MQTT-C/include/: mqtt.h
apps/mqtt-pub/MQTT-C/src/: mqtt.c  mqtt_pal.c
apps/tcp-client-to-serial/: CMakeLists.txt  client_tcp.h  main.cpp
cmake/: Doctest.cmake  TC-raspberry.cmake
include/: BCD.h  CRC.h  NBR14522.h  example.h  gerador_de_respostas.h  get_comandos_from_data.h  hexstr2bytes.h  ileitor.h  iporta.h  leitor.h  leitor_fsm.h  leitor_interface.h  leitor_old.h  leitura_padrao.h  log_policy.h  ring_buffer.h  serialib.h  task_scheduler.h  timer.h  types_local.h
include/porta_serial/: porta_serial.h
include/porta_serial/win_unix/: old_porta_serial.h
include/serial/: serial_parameters_types.h  serial_policy_generic_os.h  serial_policy_unix.h  serial_policy_win_unix.h
include/simulador/: gerador_de_respostas.h  medidor.h
include/timer/: timer.h  timer_policy_win_unix.h
scripts/: build.sh  format-clang.sh  interpretaComandoNBR14522.py  run_tests.sh
scripts/raspberry/: build.sh
src/: CRC.cpp  example.cpp
src/porta_serial/: serialib.cpp
src/serial/: serial_policy_unix.cpp
src/serial/win_unix/: serial.cpp  serialib.cpp
src/timer/: std_timer.cpp
src/timer/win_unix/: timer.cpp
tests/: BCD.cpp  CMakeLists.txt  CRC.cpp  dummy.cpp  gerador_de_respostas.cpp  get_comandos_from_data.cpp  interfaces.cpp  leitor.cpp  main.cpp  medidorNBR14522.cpp  medidor_simulado.cpp  medidor_simulado_2.cpp  ring_buffer.cpp  task_scheduler.cpp  timer.cpp
tests/simulador/: gerador_de_respostas.cpp  medidor.cpp
